# WebCrawler

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Crawler.Core/: CMakeLists.txt
Crawler.Core/include/Crawler.Core/: DependencyManager.h  WebCrawlerResultReceiver.h  WebCrawlerService.h
Crawler.Core/include/Crawler.Core/data/: WebCrawledRequestData.h  WebCrawledResultData.h
Crawler.Core/src/: DependencyManager.cpp  WebCrawlerService.cpp
Crawler.Core/src/data/: WebCrawledResultData.cpp
Crawler.Gui/: CMakeLists.txt
Crawler.Gui/include/Crawler.Gui/controller/: MainScreenController.hpp
Crawler.Gui/include/Crawler.Gui/model/: LoggerModel.hpp  MainScreenLogger.hpp  WebCrawlerSettings.hpp
Crawler.Gui/src/: main.cpp
Crawler.Gui/src/qml/: Logger.qml  MainScreen.qml  ParsingProgress.qml  main.qml  qml.qrc
Crawler.Gui/src/qml/input/: InputSearchText.qml  InputSettings.qml  InputUrl.qml
Crawler.Gui/src/searcher/controller/: MainScreenController.cpp
Crawler.Gui/src/searcher/model/: LoggerModel.cpp  MainScreenLogger.cpp
Crawler.Logger/: CMakeLists.txt
Crawler.Logger/include/Crawler.Logger/: LoggerItem.h  LoggerReceiver.h  LoggerService.h
Crawler.Logger/src/: LoggerService.cpp
Crawler.Network/: CMakeLists.txt
Crawler.Network/include/Crawler.Network/: NetworkService.h
Crawler.Network/src/: NetworkService.cpp
Crawler.Utility/: CMakeLists.txt
Crawler.Utility/include/Crawler.Utility/: RegularExpressionMatcher.h
Crawler.Utility/src/: RegularExpressionMatcher.cpp
